# advent-of-code

./: .gitignore
2023/: .gitignore  CMakeLists.txt  README.md
2023/day1/: CMakeLists.txt
2023/day1/sources/: main.cpp
2023/day2/: CMakeLists.txt
2023/day2/sources/: main.cpp
2023/day3/: CMakeLists.txt
2023/day3/sources/: main.cpp
2023/day4/: CMakeLists.txt
2023/day4/sources/: main.cpp
2023/day5/: CMakeLists.txt
2023/day5/sources/: debug.h  main.cpp  parsing.cpp  parsing.h  part1solver.cpp  part1solver.h  part2solver.cpp  part2solver.h  solver.h
2023/utils/: CMakeLists.txt
2023/utils/include/: args.h  utilities.h
2023/utils/sources/: args.cpp  utilities.cpp
2024/.template/: go.mod  main.go
2024/.template/solution/: solution.go
2024/one/: go.mod  main.go
2024/one/part_one/: solver.go
2024/one/part_two/: solver.go
2024/one/solution/: solution.go
2024/one/solver/: solver.go
2024/three/: go.mod  main.go
2024/three/solution/: solution.go
2024/two/: go.mod  main.go
2024/two/solution/: solution.go
2024/utils/: go.mod
2024/utils/args/: args.go
2024/utils/bmath/: int.go
2024/utils/solution/: solution.go
2024/utils/solver/: solver.go
2024/utils/timer/: timer.go
